[gd_scene load_steps=18 format=3 uid="uid://basq8aipdty25"]

[ext_resource type="Script" uid="uid://8pqitmbujhpc" path="res://stage.gd" id="1_vsjsl"]
[ext_resource type="Script" uid="uid://krhi7j0tumep" path="res://forest.gd" id="2_1edn8"]
[ext_resource type="Script" uid="uid://y3xaudar3pra" path="res://addons/Basic FPS Player/Src/basic_player_startup.gd" id="2_rnkuw"]
[ext_resource type="PackedScene" uid="uid://kmyakts4l64t" path="res://addons/Basic FPS Player/Src/basic_player_head.tscn" id="3_gx6sy"]
[ext_resource type="PackedScene" uid="uid://d2r2fmqys3oj2" path="res://axe.tscn" id="4_vpggq"]
[ext_resource type="Script" uid="uid://cbx174hggmiwe" path="res://ui.gd" id="5_16g40"]
[ext_resource type="AudioStream" uid="uid://b52fp054mb5ik" path="res://collect-points-190037.mp3" id="7_1edn8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6eo5e"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_aees8"]
sky_material = SubResource("ProceduralSkyMaterial_6eo5e")

[sub_resource type="Environment" id="Environment_rnkuw"]
background_mode = 2
sky = SubResource("Sky_aees8")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_16g40"]
albedo_color = Color(0.14690134, 0.33401322, 0.14623109, 1)

[sub_resource type="BoxMesh" id="BoxMesh_vpggq"]
material = SubResource("StandardMaterial3D_16g40")
size = Vector3(80, 1, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1edn8"]
data = PackedVector3Array(-40, 0.5, 50, 40, 0.5, 50, -40, -0.5, 50, 40, 0.5, 50, 40, -0.5, 50, -40, -0.5, 50, 40, 0.5, -50, -40, 0.5, -50, 40, -0.5, -50, -40, 0.5, -50, -40, -0.5, -50, 40, -0.5, -50, 40, 0.5, 50, 40, 0.5, -50, 40, -0.5, 50, 40, 0.5, -50, 40, -0.5, -50, 40, -0.5, 50, -40, 0.5, -50, -40, 0.5, 50, -40, -0.5, -50, -40, 0.5, 50, -40, -0.5, 50, -40, -0.5, -50, 40, 0.5, 50, -40, 0.5, 50, 40, 0.5, -50, -40, 0.5, 50, -40, 0.5, -50, 40, 0.5, -50, -40, -0.5, 50, 40, -0.5, 50, -40, -0.5, -50, 40, -0.5, 50, 40, -0.5, -50, -40, -0.5, -50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1edn8"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="BoxMesh" id="BoxMesh_1edn8"]
material = SubResource("StandardMaterial3D_1edn8")
size = Vector3(80, 0.1, 90)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_16g40"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_jx6rg"]

[node name="Stage" type="Node3D"]
script = ExtResource("1_vsjsl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rnkuw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.748957, -0.434718, 0.500084, 0, 0.754709, 0.65606, -0.662619, -0.491361, 0.565244, 13.7304, 21.4745, 15.9892)

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5001581, 0)
mesh = SubResource("BoxMesh_vpggq")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1edn8")

[node name="Forest" type="Node3D" parent="."]
script = ExtResource("2_1edn8")
tree_num = 128

[node name="TreeField" type="MeshInstance3D" parent="Forest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.007915854, -4.8692207)
mesh = SubResource("BoxMesh_1edn8")

[node name="Basic FPS Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.949759, 1.4945271, 43.441814)
collision_layer = 17
collision_mask = 17
script = ExtResource("2_rnkuw")
metadata/_custom_type_script = "uid://y3xaudar3pra"

[node name="Head" parent="Basic FPS Player" instance=ExtResource("3_gx6sy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.692379, 0)

[node name="Axe" parent="Basic FPS Player/Head" instance=ExtResource("4_vpggq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5940008, -0.36835456, -1.0585885)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Basic FPS Player"]
shape = SubResource("CapsuleShape3D_16g40")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_16g40")

[node name="CountDown" type="RichTextLabel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 12.0
offset_bottom = -530.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="RichTextLabel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 540.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI/Score"]
stream = ExtResource("7_1edn8")
volume_db = -8.0

[node name="BigScore" type="RichTextLabel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/normal_font_size = 256
bbcode_enabled = true
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -96.0
offset_right = 86.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 0
text = "Try Again!!!"

[node name="OutBoundsArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.1941576, 0)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="OutBoundsArea3D"]
shape = SubResource("WorldBoundaryShape3D_jx6rg")

[node name="TreesOutBoundsArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -17.369944, 0)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="TreesOutBoundsArea3D"]
shape = SubResource("WorldBoundaryShape3D_jx6rg")

[node name="CountDown" type="Timer" parent="."]
autostart = true

[connection signal="chop" from="Basic FPS Player/Head/Axe" to="UI" method="_on_axe_chop"]
[connection signal="game_over" from="UI" to="Basic FPS Player" method="_on_ui_game_over"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="body_entered" from="OutBoundsArea3D" to="." method="_on_out_bounds_area_3d_body_entered"]
[connection signal="body_entered" from="TreesOutBoundsArea3D" to="." method="_on_trees_out_bounds_area_3d_body_entered"]
[connection signal="timeout" from="CountDown" to="UI" method="_on_count_down_timeout"]
